--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Research Cambridge</a>.</p>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://conf.researchr.org/home/POPL-2018">
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl18.sigplan.org/">
     Principles of Programming Languages, POPL 2018</b></a>
     (Artifact Evaluation Co-Chair)
   <ul>
@@ -417,7 +417,7 @@ MPRI website</a>.</p>
             Marco Stronati, and
             David Swasey.
     <b><a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation (extended abstract)</a></b>.
-            To be presented at the <a href="https://popl18.sigplan.org/track/prisc-2018">2nd Workshop on Principles of Secure Compilation (PriSC)</a>, January 2018.
+            Presented at the <a href="https://popl18.sigplan.org/track/prisc-2018">2nd Workshop on Principles of Secure Compilation (PriSC)</a>, January 2018.
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -430,7 +430,7 @@ MPRI website</a>.</p>
             Benjamin C. Pierce, and
             Andrew Tolmach.
     <b><a href="https://arxiv.org/abs/1710.07308">Formally secure compilation of unsafe low-level components (extended abstract)</a></b>.
-            To be presented at the <a href="https://popl18.sigplan.org/track/prisc-2018">2nd Workshop on Principles of Secure Compilation (PriSC)</a>, January 2018.
+            Presented at the <a href="https://popl18.sigplan.org/track/prisc-2018">2nd Workshop on Principles of Secure Compilation (PriSC)</a>, January 2018.
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -577,7 +577,8 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation of Unsafe Low-level Components</em></a>
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://www.info.uaic.ro/bin/Main/">Infoiasi</a>: <a href="talks/2017-12-18-Secure-Compilation-Infoiasi.pdf">slides</a> (2017-12-18)</li>
+      <li><b>Recent:</b> <a href="">PriSC'18 in LA</a>: <a href="http://popl18.sigplan.org/track/prisc-2018">slides</a> (2018-01-13)</li>
+      <li><a href="https://www.info.uaic.ro/bin/Main/">Infoiasi</a>: <a href="talks/2017-12-18-Secure-Compilation-Infoiasi.pdf">slides</a> (2017-12-18)</li>
       <li><a href="http://www.ccs.neu.edu/home/weiss/esop18/pc.html">ESOP PC Workshop</a>: <a href="talks/2017-12-15-Secure-Compilation-ESOP-PC.pdf">slides</a> (2017-12-15)</li>
     </ul>
   </li>
@@ -607,7 +608,7 @@ MPRI website</a>.</p>
 
   </li>
 
-  <li style="margin-bottom: 1ex;"><em><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy, EuroS&amp;P 2018</a></em></a> 
+  <li style="margin-bottom: 1ex;"><em><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy, EuroS&amp;P 2017</a></em></a> 
 
     <ul style="font-size: small">
       <li>General Chair's Welcome Message: <a href="talks/2017-04-26-EuroSP-Welcome.pdf">slides</a> (2017-04-26)</li>
