--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation of Unsafe Low-level Components</em></a>
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="">PriSC'18 in LA</a>: <a href="http://popl18.sigplan.org/track/prisc-2018">slides</a> (2018-01-13)</li>
+      <li><b>Recent:</b> <a href="http://popl18.sigplan.org/track/prisc-2018">PriSC'18 in LA</a>: <a href="https://popl18.sigplan.org/event?action-call-with-get-request-type=1&action253048efca6aee4547702963143c6170288=1&__ajax_runtime_request__=1&context=POPL-2018&event=prisc-2018-formally-secure-compilation-of-unsafe-low-level-components">slides</a> (2018-01-13)</li>
       <li><a href="https://www.info.uaic.ro/bin/Main/">Infoiasi</a>: <a href="talks/2017-12-18-Secure-Compilation-Infoiasi.pdf">slides</a> (2017-12-18)</li>
       <li><a href="http://www.ccs.neu.edu/home/weiss/esop18/pc.html">ESOP PC Workshop</a>: <a href="talks/2017-12-15-Secure-Compilation-ESOP-PC.pdf">slides</a> (2017-12-15)</li>
     </ul>
