--- a/index.html
+++ b/index.html
@@ -80,23 +80,6 @@ Research Cambridge</a>.</p>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="#students">PhD position on F* available, funded by Microsoft Research</a></li> -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl18.sigplan.org/">
-    Principles of Programming Languages, POPL 2018</b></a>
-    (Artifact Evaluation Co-Chair)
-  <ul>
-  <!-- <li>Abstract deadline: 1 July 2017</li> -->
-  <!-- <li>Submission deadline: 7 July 2017</li> -->
-  <li>Conference: 8-13 January 2018, Los Angeles, USA</li>
-  </ul>
-  </li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="http://popl18.sigplan.org/track/prisc-2018">Principles of Secure Compilation, PriSC 2018</b></a> (PC Chair, Co-organizer)
-  <ul>
-  <!-- <li>Submission deadline: 18 October 2017</li> -->
-  <li>Workshop at POPL: 13 January 2018, Los Angeles, USA</li>
-  </ul>
-  </li>
-
   <li style="margin-bottom: 1ex;"><b><a href="http://www.etaps.org/index.php/2018/esop">European Symposium on Programming, ESOP 2018</a></b> (PC member)
   <ul>
   <!-- <li>Abstract deadline: 13 October 2017</li> -->
@@ -125,6 +108,24 @@ Research Cambridge</a>.</p>
   </li>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school in Aarhus</li> -->
+
+  <li style="margin-bottom: 1ex;"><a href="https://popl18.sigplan.org/">
+    Principles of Programming Languages, POPL 2018</a>
+    (Artifact Evaluation Co-Chair)
+  <ul>
+  <!-- <li>Abstract deadline: 1 July 2017</li> -->
+  <!-- <li>Submission deadline: 7 July 2017</li> -->
+  <li>Conference: 8-13 January 2018, Los Angeles, USA</li>
+  </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><a href="http://popl18.sigplan.org/track/prisc-2018">Principles of Secure Compilation, PriSC 2018</a> (PC Chair, Co-organizer)
+  <ul>
+  <!-- <li>Submission deadline: 18 October 2017</li> -->
+  <li>Workshop at POPL: 13 January 2018, Los Angeles, USA</li>
+  </ul>
+  </li>
+
 
   <li style="margin-bottom: 1ex;"><a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming, TFP 2017</a> (Invited Speaker, <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a>)
   <ul>
