--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.sigsac.org/ccs.html">ACM Conference on Computer and Communications Security (CCS 2018)</b></a> (PC member)
+  <ul>
+  <li>Submission deadline: May 8, 2018</li>
+  <!-- <li>Conference: 24-26 April, 2018, London, United Kingdom</li> -->
+  </ul>
+  </li>
+
   <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school in Aarhus</li> -->
 
   <li style="margin-bottom: 1ex;"><a href="https://popl18.sigplan.org/">
