--- a/index.html
+++ b/index.html
@@ -419,13 +419,19 @@ MPRI website</a>.</p>
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-            Deepak Garg,
+            Guglielmo Fachini,
             C&#259;t&#259;lin Hri&#355;cu,
-            Marco Patrignani,
-            Marco Stronati, and
-            David Swasey.
-    <b><a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation (extended abstract)</a></b>.
-            Presented at the <a href="https://popl18.sigplan.org/track/prisc-2018">2nd Workshop on Principles of Secure Compilation (PriSC)</a>, January 2018.
+            Marco Stronati,
+            Arthur Azevedo de Amorim,
+            Ana Nora Evans,
+            Carmine Abate,
+            Roberto Blanco,
+            Théo Laurent,
+            Benjamin C. Pierce, and
+            Andrew Tolmach.
+    <b><a href="">When Good Components Go Bad:
+           Formally Secure Compilation Despite Dynamic Compromise</a></b>.
+           February 2018.
   </li>
 
   <li style="margin-bottom: 1ex;">
@@ -438,6 +444,16 @@ MPRI website</a>.</p>
             Benjamin C. Pierce, and
             Andrew Tolmach.
     <b><a href="https://arxiv.org/abs/1710.07308">Formally secure compilation of unsafe low-level components (extended abstract)</a></b>.
+            Presented at the <a href="https://popl18.sigplan.org/track/prisc-2018">2nd Workshop on Principles of Secure Compilation (PriSC)</a>, January 2018.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+            Deepak Garg,
+            C&#259;t&#259;lin Hri&#355;cu,
+            Marco Patrignani,
+            Marco Stronati, and
+            David Swasey.
+    <b><a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation (extended abstract)</a></b>.
             Presented at the <a href="https://popl18.sigplan.org/track/prisc-2018">2nd Workshop on Principles of Secure Compilation (PriSC)</a>, January 2018.
   </li>
 
