--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ MPRI website</a>.</p>
             C&#259;t&#259;lin Hri&#355;cu, and
             Benjamin C. Pierce.<br/>
     <b><a href="http://arxiv.org/abs/1705.07354">The Meaning of Memory Safety</a></b>.
-            arXiv:1705.07354, August 2017.
+            Accepted at POST, April 2018.
   <ul style="font-size: small">
     <li>A previous draft was entitled
         Alpha is for Address! The Essence of Memory Safety</li>
