--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ MPRI website</a>.</p>
             Théo Laurent,
             Benjamin C. Pierce, and
             Andrew Tolmach.
-    <b><a href="">When Good Components Go Bad:
+    <b><a href="https://arxiv.org/abs/1802.00588">When Good Components Go Bad:
            Formally Secure Compilation Despite Dynamic Compromise</a></b>.
            February 2018.
   </li>
