--- a/index.html
+++ b/index.html
@@ -432,19 +432,10 @@ MPRI website</a>.</p>
     <b><a href="https://arxiv.org/abs/1802.00588">When Good Components Go Bad:
            Formally Secure Compilation Despite Dynamic Compromise</a></b>.
            February 2018.
-  </li>
-
-  <li style="margin-bottom: 1ex;">
-            Guglielmo Fachini,
-            C&#259;t&#259;lin Hri&#355;cu,
-            Marco Stronati,
-            Ana Nora Evans,
-            Théo Laurent,
-            Arthur Azevedo de Amorim,
-            Benjamin C. Pierce, and
-            Andrew Tolmach.
-    <b><a href="https://arxiv.org/abs/1710.07308">Formally secure compilation of unsafe low-level components (extended abstract)</a></b>.
-            Presented at the <a href="https://popl18.sigplan.org/track/prisc-2018">2nd Workshop on Principles of Secure Compilation (PriSC)</a>, January 2018.
+    <ul style="font-size: small">
+      <li>A preliminary version was entitled
+          <a href="https://arxiv.org/abs/1710.07308">Formally secure compilation of unsafe low-level components (extended abstract)</a></li>
+    </ul>
   </li>
 
   <li style="margin-bottom: 1ex;">
