--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ MPRI website</a>.</p>
            Formally Secure Compilation Despite Dynamic Compromise</a></b>.
            February 2018.
     <ul style="font-size: small">
-      <li>A preliminary version was called
+      <li>A previous version was called
           <a href="https://arxiv.org/abs/1710.07308">Formally secure compilation of unsafe low-level components (extended abstract)</a></li>
     </ul>
   </li>
