--- a/index.html
+++ b/index.html
@@ -433,8 +433,8 @@ MPRI website</a>.</p>
            Formally Secure Compilation Despite Dynamic Compromise</a></b>.
            February 2018.
     <ul style="font-size: small">
-      <li>A previous version was called
-          <a href="https://arxiv.org/abs/1710.07308">Formally secure compilation of unsafe low-level components (extended abstract)</a></li>
+      <li>A previous extended abstract was called
+          <a href="https://arxiv.org/abs/1710.07308">Formally secure compilation of unsafe low-level components</a></li>
     </ul>
   </li>
 
