--- a/students.html
+++ b/students.html
@@ -60,7 +60,7 @@
 
   <li style="margin-bottom: 1ex;"><a href="http://www.stronati.org/">Marco Stronati</a> (Postdoctoral Researcher)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://fachini.net/">Guglielmo Fachini</a> (Research Intern)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://fachini.net/">Guglielmo Fachini</a> (Research Engineer)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://www.williamjbowman.com/">William J. Bowman</a> (Research Intern, Northeastern University)</li>
 
