--- a/students.html
+++ b/students.html
@@ -73,9 +73,9 @@
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now PostDoc student at <a href="https://www.cylab.cmu.edu/">CMU</a>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://pit-claudel.fr/clement/">Clément Pit-Claudel</a> (Intern, MIT)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://pit-claudel.fr/clement/">Clément Pit-Claudel</a> (Research Intern, MIT)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a> (Intern, ENS Paris)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a> (Research Intern, ENS Paris)</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://ananoraevans.org/">Ana Nora Evans</a> (Visiting Researcher, University of Virginia)</li>
 
