--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://projects.lsv.fr/epit18/?page_id=49">Program Verification in F* course</a> at <a href="http://projects.lsv.fr/epit18/">EPIT 2018 Software Verification Spring School</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="http://projects.lsv.fr/epit18/?page_id=49">Program Verification with F*</a> course at <a href="http://projects.lsv.fr/epit18/">EPIT 2018 Software Verification Spring School</a></b>
   <ul>
   <li>School: 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li>
   </ul>
