--- a/index.html
+++ b/index.html
@@ -676,11 +676,7 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://projects.lsv.fr/epit18/?page_id=49">Program Verification in F* course</a> at <a href="http://projects.lsv.fr/epit18/">EPIT 2018 Software Verification Spring School</a></b>
-  <ul>
-  <li>School: 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li>
-  </ul>
-  </li>
+  <li style="margin-bottom: 1ex;"><b><a href="http://projects.lsv.fr/epit18/?page_id=49">Program Verification with F*</a> course at <a href="http://projects.lsv.fr/epit18/">EPIT 2018 Software Verification Spring School</a></b>, 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">Verifying Cryptographic Implementations with F*</a></b> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school. Aarhus, Denmark, October<!-- 2-4 -->, 2017
   </li>
