--- a/teaching.html
+++ b/teaching.html
@@ -22,6 +22,14 @@
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><b><a href="http://projects.lsv.fr/epit18/?page_id=49">Program Verification with F*</a></b> course at <a href="http://projects.lsv.fr/epit18/">EPIT 2018 Software Verification Spring School</a>,<br/> 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">Verifying Cryptographic Implementations with F*</a></b> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school. Aarhus, Denmark, October<!-- 2-4 -->, 2017
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/nancy2017/">Verifying Cryptographic Implementations with F*</a></b> course at <a href="http://www.cs.bris.ac.uk/proofschool/">Models and Tools for Cryptographic Proofs</a> summer school, Nancy, France, <!-- 10-13 --> July 2017
+  </li>
+
   <li style="margin-bottom: 1ex;"><b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/mpri-jan2017/">Program Verification with F*</a></b> at the <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php?id=start">Parisian Master of Research in Computer Science (MPRI)</a>, January 2017
   </li>
 
