--- a/index.html
+++ b/index.html
@@ -590,6 +590,15 @@ MPRI website</a>.</p>
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><em><a href="https://popl18.sigplan.org/track/prisc-2018">Principles of Secure Compilation, PriSC'18</a></em></a> 
+
+    <ul style="font-size: small">
+      <li>Program Chair's Welcome Message: <a href="https://popl18.sigplan.org/event/prisc-2018-prisc-welcome">slides</a> (2018-01-13)</li>
+    </ul>
+
+  </li>
+
+
   <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation of Unsafe Low-level Components</em></a>
     <ul style="font-size: small">
       <li><b>Recent:</b> <a href="http://seminaire-dga.gforge.inria.fr/2017/CatalinHritcu_fr.html">SoSySec seminar: Software and Systems Security</a> at
