--- a/talks.html
+++ b/talks.html
@@ -25,10 +25,38 @@
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;"><em>Verified Effectful Programming in F*</em></a> 
+  <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation of Unsafe Low-level Components</em></a>
+    <ul style="font-size: small">
+      <li><b>Upcoming:</b> <a href=""></a> IRIF, Paris: <a href="">slides</a> (2018-02-26)</li>
+      <li><b>Recent:</b> <a href="http://seminaire-dga.gforge.inria.fr/2017/CatalinHritcu_fr.html">SoSySec seminar: Software and Systems Security</a> at
+IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</a> (2018-02-05)</li>
+      <li><a href="http://popl18.sigplan.org/track/prisc-2018">Workshop on Principles of Secure Compilation (PriSC'18)</a> at POPL'19 in LA: <a href="https://popl18.sigplan.org/event?action-call-with-get-request-type=1&action253048efca6aee4547702963143c6170288=1&__ajax_runtime_request__=1&context=POPL-2018&event=prisc-2018-formally-secure-compilation-of-unsafe-low-level-components">slides</a> (2018-01-13)</li>
+      <li><a href="https://www.info.uaic.ro/bin/Main/">Al. I. Cuza University of Iasi</a>: <a href="talks/2017-12-18-Secure-Compilation-Infoiasi.pdf">slides</a> (2017-12-18)</li>
+      <li><a href="http://www.ccs.neu.edu/home/weiss/esop18/pc.html">ESOP PC Workshop</a> at Inria Paris: <a href="talks/2017-12-15-Secure-Compilation-ESOP-PC.pdf">slides</a> (2017-12-15)</li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><em><a href="https://popl18.sigplan.org/track/prisc-2018">Principles of Secure Compilation, PriSC'18</a></em></a> 
 
     <ul style="font-size: small">
-      <li><b>Upcoming</b>: Keynote Talk at <a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming (TFP)</a> <!--: <a href="talks/">slides</a> --> (2017-06-21)</li>
-      <li><b>Upcoming</b>: <a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a> <!--: <a href="talks/">slides</a> --> (2017-06-14)</li>
+      <li>Program Chair's Welcome Message: <a href="https://popl18.sigplan.org/event/prisc-2018-prisc-welcome">slides</a> (2018-01-13)</li>
+    </ul>
+
+  </li>
+
+  <li style="margin-bottom: 1ex;"><em>What's new in F*?</em></a> 
+
+    <ul style="font-size: small">
+      <li><b>Recent</b>: Talk at <a href="">Everest Workshop</a>: <a href="talks/fstar_all_hands_sept_2017/out/fstar-all-hands.html">slides</a> (2017-10-02)</li>
+    </ul>
+
+  </li>
+
+  <li style="margin-bottom: 1ex;"><em>Verified Effectful Programming in F*</em></a> 
+
+    <ul style="font-size: small">
+      <li><b>Recent</b>: Invited Keynote Talk at <a href="https://www.cs.kent.ac.uk/events/tfp17/index.html">Trends in Functional Programming (TFP)</a>: <a href="talks/fstar-tfp17/out/fstar-tfp.html">slides</a> (2017-06-21)</li>
+      <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a> (2017-06-14)</li>
     </ul>
 
   </li>
@@ -41,7 +69,7 @@
 
   </li>
 
-  <li style="margin-bottom: 1ex;"><em><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy</a></em></a> 
+  <li style="margin-bottom: 1ex;"><em><a href="http://www.ieee-security.org/TC/EuroSP2017/">European Symposium on Security and Privacy, EuroS&amp;P 2017</a></em></a> 
 
     <ul style="font-size: small">
       <li>General Chair's Welcome Message: <a href="talks/2017-04-26-EuroSP-Welcome.pdf">slides</a> (2017-04-26)</li>
@@ -52,7 +80,7 @@
   <li style="margin-bottom: 1ex;"><em>Efficient Formally Secure Compilers to a Tagged Architecture</em></a> 
 
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="http://confiance-numerique.clermont-universite.fr/index-en.html">Université Clermont Auvergne</a>: <a href="talks/2017-04-06-Secure-Compilation-Clermont-Ferrand.pdf">slides</a>, <b><a href="http://webtv.u-clermont1.fr/media-MEDIA170410150815297">video</a></b> (2017-04-06)</li>
+      <li><a href="http://confiance-numerique.clermont-universite.fr/index-en.html">Université Clermont Auvergne</a>: <a href="talks/2017-04-06-Secure-Compilation-Clermont-Ferrand.pdf">slides</a>, <b><a href="http://webtv.u-clermont1.fr/media-MEDIA170410150815297">video</a></b> (2017-04-06)</li>
       <li><a href="https://vals.lri.fr/">LRI VALS</a> seminar at University Paris-Sud: <a href="talks/2017-03-17-Secure-Compilation-LRI.pdf">slides</a> (2017-03-17)</li>
       <li><a href="http://www-list.cea.fr/recherche-technologique/programmes-de-recherche/systemes-embarques/validation-et-verification">CEA List</a> seminar: <a href="talks/2016-12-13-Secure-Compilation-CEA.pdf">slides</a> (2016-12-13)</li>
       <li><a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-redmond/">Microsoft Research Redmond</a> security seminar: <a href="talks/2016-11-03-Secure-Compilation-MSR.pdf">slides</a> (2016-11-03)</li>
@@ -61,6 +89,14 @@
       <li>ERC Starting Grant interview: <a href="talks/2016-05-31-Secure-Compilation-ERC.pdf">slides</a> (2016-05-31)</li>
       <li><a href="http://prosecco.gforge.inria.fr/events.php">Inria Prosecco Seminar</a>: <a href="talks/2016-03-02-Micro-Policies-Secure-Compilation-Prosecco.pdf">slides</a> (2016-03-02)</li>
       <li><a href="http://www.mpi-sws.org/">MPI-SWS</a> <a href="http://www.mpi-sws.org/index.php?n=events/swscolloquium/program">Colloquium</a>: <a href="talks/2016-02-22-Micro-Policies-Secure-Compilation-MPI-SWS.pdf">slides</a> (2016-02-22)</li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex"><em><a href="https://popl17.sigplan.org/event/scm-2017-what-is-secure-compilation-part-ii">What is secure compilation?</a></em>
+    <ul style="font-size: small">
+      <li>Short talk at <a href="https://conf.researchr.org/track/POPL-2017/SCM-2017">Secure Compilation Meeting (SCM)</a>:
+          <a href="http://prosecco.gforge.inria.fr/personal/hritcu/talks/2017-01-15-What-Is-Secure-Compilation-SCM.pdf">slides</a> (2017-01-15)
+      </li>
     </ul>
   </li>
 
