--- a/talks.html
+++ b/talks.html
@@ -26,7 +26,7 @@
 
   <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation of Unsafe Low-level Components</em></a>
     <ul style="font-size: small">
-      <li><b>Upcoming:</b> <a href=""></a> IRIF, Paris: <a href="">slides</a> (2018-02-26)</li>
+      <li><b>Upcoming:</b> <a href=""></a> IRIF, Paris 7: <a href="">slides</a> (2018-02-26)</li>
       <li><b>Recent:</b> <a href="http://seminaire-dga.gforge.inria.fr/2017/CatalinHritcu_fr.html">SoSySec seminar: Software and Systems Security</a> at
 IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</a> (2018-02-05)</li>
       <li><a href="http://popl18.sigplan.org/track/prisc-2018">Workshop on Principles of Secure Compilation (PriSC'18)</a> at POPL'19 in LA: <a href="https://popl18.sigplan.org/event?action-call-with-get-request-type=1&action253048efca6aee4547702963143c6170288=1&__ajax_runtime_request__=1&context=POPL-2018&event=prisc-2018-formally-secure-compilation-of-unsafe-low-level-components">slides</a> (2018-01-13)</li>
