--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@ MPRI website</a>.</p>
 
   <li style="margin-bottom: 1ex;"><em>Formally Secure Compilation of Unsafe Low-level Components</em></a>
     <ul style="font-size: small">
-      <li><b>Upcoming:</b> <a href=""></a> IRIF, Paris: <a href="">slides</a> (2018-02-26)</li>
+      <li><b>Upcoming:</b> <a href=""></a> IRIF, Paris 7: <a href="">slides</a> (2018-02-26)</li>
       <li><b>Recent:</b> <a href="http://seminaire-dga.gforge.inria.fr/2017/CatalinHritcu_fr.html">SoSySec seminar: Software and Systems Security</a> at
 IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</a> (2018-02-05)</li>
       <li><a href="http://popl18.sigplan.org/track/prisc-2018">Workshop on Principles of Secure Compilation (PriSC'18)</a> at POPL'19 in LA: <a href="https://popl18.sigplan.org/event?action-call-with-get-request-type=1&action253048efca6aee4547702963143c6170288=1&__ajax_runtime_request__=1&context=POPL-2018&event=prisc-2018-formally-secure-compilation-of-unsafe-low-level-components">slides</a> (2018-01-13)</li>
@@ -673,7 +673,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
           <a href="talks/fstar-dagstuhl.html?transition=none&history=1">slides</a> (2016-03-30)
       </li>
 
-      <li><a href="http://www.mlworkshop.org/ml2015">ML Workshop 2015</a>: <a href="http://www.mlworkshop.org/slides-swamy.html">slides</a>, <a href="https://www.youtube.com/watch?v=bEJKKquyngk">video</a> (2015-09-03)
+      <li><a href="http://www.mlworkshop.org/slides-swamy.html">ML Workshop 2015</a>: <a href="http://www.mlworkshop.org/slides-swamy.html">slides</a>, <a href="https://www.youtube.com/watch?v=bEJKKquyngk">video</a> (2015-09-03)
       </li>
     </ul>
   </li>
