--- a/talks.html
+++ b/talks.html
@@ -117,7 +117,7 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
     Compilation, and Dynamic Monitoring</em></a> 
 
     <ul style="font-size: small">
-      <li>Invited vision talk at scientific committee meeting of
+      <li><b>Invited Vision Talk</b> at Scientific Committee meeting of
           Nokia's Bell Labs<br/>-- Inria common lab:
           <a href="talks/Alcatel-Lucent.pdf">slides</a>
           (2015-12-15)</li>
