--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@ Research Cambridge</a>.</p>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="http://prosecco.gforge.inria.fr/personal/hritcu/teaching/aarhus2017/">F* course</a> at <a href="https://cs.au.dk/research/logic-and-semantics/courses/">Computer-aided security proofs</a> summer school in Aarhus</li> -->
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl18.sigplan.org/">
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl19.sigplan.org">
     Principles of Programming Languages, POPL 2019</a></b>
     (Artifact Evaluation Co-Chair)
   <ul>
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
   <!-- <li>Submission deadline: 7 July 2017</li> -->
-  <!-- 8-13 January 2018, Los Angeles, USA -->
+  <!-- 8-13 January 2018, Los Angeles, USA https://popl18.sigplan.org/ -->
   <li>Conference: 6-12 January 2019, Lisbon, Portugal</li>
   </ul>
   </li>
