--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ MPRI website</a>.</p>
     <li style="margin-bottom: 1ex;">
       <em>design and verification of security-critical systems</em>:
       reference monitors,
-      secure compilers,
+      secure compilation chains,
       secure hardware</li>
   </ul>
 
