--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Research Cambridge</a>.</p>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.sigsac.org/ccs.html">ACM Conference on Computer and Communications Security (CCS 2018)</b></a> (PC member)
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.sigsac.org/ccs/CCS2018/">ACM Conference on Computer and Communications Security (CCS 2018)</b></a> (PC member)
   <ul>
   <li>Submission deadline: May 8, 2018</li>
   <!-- <li>Conference: 24-26 April, 2018, London, United Kingdom</li> -->
