--- a/students.html
+++ b/students.html
@@ -24,7 +24,7 @@
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/kyoDralliam">Kenji Maillard</a>
   <ul>
-    <li style="margin-top: 1ex;">PhD student at Inria Paris and <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> since 2017-01: <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar-kenji.pdf">Semantic Foundations for F*</a></li>
+    <li style="margin-top: 1ex;">PhD student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> and <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> since 2017-01: <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar-kenji.pdf">Semantic Foundations for F*</a></li>
   </ul>
   <!-- <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li> -->
 
@@ -32,13 +32,15 @@
   <ul>
     <li style="margin-top: 1ex;">PhD Student at <a href="http://web.fceia.unr.edu.ar/">National University of Rosario</a> since 2017-04, external co-supervisor:<br/>
      Metatheory for Semi-Automatic Verification of Effectful Programs.</li>
-  </ul>
-  <ul>
     <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2016-01 to 2016-06:<br/> <a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></li>
   </ul>
   <!-- <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Rosario</a>]</div></li> -->
 
-  <li style="margin-bottom: 1ex;"><a href="https://danelahman.github.io/">Danel Ahman</a> (Postdoctoral Researcher)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://danelahman.github.io/">Danel Ahman</a>
+  <ul>
+    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2017-04: <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/topics/2016/fstar-kenji.pdf">Semantic Foundations for F*</a></li>
+  </ul>
+  </li>
 
   <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto Blanco</a> (Postdoctoral Researcher)</li>
 
