--- a/students.html
+++ b/students.html
@@ -44,7 +44,7 @@
 
   <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto Blanco</a>
   <ul>
-    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-01: Formally Secure Compilation Despite Dynamic Compromise</li>
+    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-01:<br/> Formally Secure Compilation Despite Dynamic Compromise</li>
   </ul>
   </li>
 
