--- a/students.html
+++ b/students.html
@@ -38,18 +38,25 @@
 
   <li style="margin-bottom: 1ex;"><a href="https://danelahman.github.io/">Danel Ahman</a>
   <ul>
-    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2017-04: Semantic Foundations for F*</li>
+    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2017-04:
+      Semantic Foundations for F*</li>
   </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto Blanco</a>
   <ul>
-    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-01:<br/> Formally Secure Compilation Despite Dynamic Compromise</li>
+    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-01:<br/>
+      Formally Secure Compilation Despite Dynamic Compromise</li>
   </ul>
   </li>
 
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a> (Research Engineer)</li>
+  <ul>
+    <li style="margin-top: 1ex;">Research Researcher at <a href="https://www.msr-inria.fr/">MSR-Inria</a> since 2017-01:<br/>
+      Meta-programming and Tactics in F*</li>
+  </ul>
+  </li>
 
   <li style="margin-bottom: 1ex;"><a href="https://www.researchgate.net/profile/Carmine_Abate">Carmine Abate</a> (Research Intern, University of Trento)</li>
 
