--- a/students.html
+++ b/students.html
@@ -18,7 +18,7 @@
 
 <h1>C&#259;t&#259;lin Hri&#355;cu</h1>
 
-<h2>Current Group Members</h2>
+<h2>Research Group</h2>
 
 <ul style="width:42em; text-align: left">
 
