--- a/students.html
+++ b/students.html
@@ -9,7 +9,7 @@
 <head>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <title>Catalin Hritcu - Advised Students</title>
+  <title>Catalin Hritcu - Research Group</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 
 <h1>C&#259;t&#259;lin Hri&#355;cu</h1>
 
-<h2>Research Group</h2>
+<h2>Current Research Group</h2>
 
 <ul style="width:42em; text-align: left">
 
