--- a/students.html
+++ b/students.html
@@ -53,12 +53,17 @@
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a> (Research Engineer)</li>
   <ul>
-    <li style="margin-top: 1ex;">Research Researcher at <a href="https://www.msr-inria.fr/">MSR-Inria</a> since 2017-01:<br/>
+    <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.msr-inria.fr/">MSR-Inria</a> since 2017-01:<br/>
       Meta-programming and Tactics in F*</li>
   </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><a href="https://www.researchgate.net/profile/Carmine_Abate">Carmine Abate</a> (Research Intern, University of Trento)</li>
+  <ul>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2017-12:<br/>
+    Robust Hyperproperty Preservation for Secure Compilation</li>
+  </ul>
+  </li>
 
   <li style="margin-bottom: 1ex;"><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a> (Research Intern, ENS Rennes)</li>
 
