--- a/students.html
+++ b/students.html
@@ -51,14 +51,14 @@
   </li>
 
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a> (Research Engineer)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a> (Research Engineer)
   <ul>
     <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.msr-inria.fr/">MSR-Inria</a> since 2017-01:<br/>
       Meta-programming and Tactics in F*</li>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.researchgate.net/profile/Carmine_Abate">Carmine Abate</a> (Research Intern, University of Trento)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://www.researchgate.net/profile/Carmine_Abate">Carmine Abate</a> (Research Intern, University of Trento)
   <ul>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2017-12:<br/>
     Robust Hyperproperty Preservation for Secure Compilation</li>
