--- a/students.html
+++ b/students.html
@@ -61,9 +61,9 @@
   <li style="margin-bottom: 1ex;"><a href="https://www.researchgate.net/profile/Carmine_Abate">Carmine Abate</a> (Research Intern, University of Trento)
   <ul>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2017-12:<br/>
-    Robust Hyperproperty Preservation for Secure Compilation</li>
+    <a href="https://arxiv.org/abs/1710.07309">Robust Hyperproperty Preservation for Secure Compilation</a></li>
   </ul>
-  </li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at University of Trento]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a> (Research Intern, ENS Rennes)</li>
 
