--- a/students.html
+++ b/students.html
@@ -30,7 +30,7 @@
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/mtzguido">Guido Martínez</a>
   <ul>
-    <li style="margin-top: 1ex;">PhD Student at <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<a href="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario since 2017-04, Co-Supervised PhD Student:<br/>
+    <li style="margin-top: 1ex;">Co-Supervised PhD Student at <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<a href="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario since 2017-04:<br/>
      Metatheory for Semi-Automatic Verification of Effectful Programs.</li>
     <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2016-01 to 2016-06:<br/> <a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></li>
   </ul>
