--- a/students.html
+++ b/students.html
@@ -51,7 +51,7 @@
   </li>
 
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a> (Research Engineer)
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a>
   <ul>
     <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.msr-inria.fr/">MSR-Inria</a> since 2017-01:<br/>
       Meta-programming and Tactics in F*</li>
