--- a/students.html
+++ b/students.html
@@ -85,7 +85,7 @@
 
   <li style="margin-bottom: 1ex;"><a href="http://www.cis.upenn.edu/~aarthur/">Arthur Azevedo de Amorim</a>
   <ul>
-    <li style="margin-top: 1ex;">Graduated PhD student at University of Pennsylvania; 2011-08 to 2017-10, Co-Supervised with Benjamin C. Pierce:
+    <li style="margin-top: 1ex;">Graduated PhD student at University of Pennsylvania; 2011-08 to 2017-10,<br/> Co-Supervised with Benjamin C. Pierce:
       <a href="http://www.seas.upenn.edu/~aarthur/thesis.pdf">A Methodology for Micro-Policies</a></li>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2014-03 to 2014-08:<br/>
       <a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/micro-policies.pdf">Micro-Policies: Formally Verified, Tag-Based Security Monitors</a>
