--- a/students.html
+++ b/students.html
@@ -93,7 +93,12 @@
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now PostDoc at <a href="https://www.cylab.cmu.edu/">Carnegie Mellon University</a>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://www.stronati.org/">Marco Stronati</a> (Postdoctoral Researcher)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://www.stronati.org/">Marco Stronati</a>
+  <ul>
+    <li style="margin-top: 1ex;">PostDoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-01 to 2017-12:<br/>
+    Formally Secure Compilation</li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.ens-rennes.fr/">ENS Rennes</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://fachini.net/">Guglielmo Fachini</a> (Research Engineer)</li>
 
