--- a/students.html
+++ b/students.html
@@ -95,14 +95,14 @@
 
   <li style="margin-bottom: 1ex;"><a href="http://www.stronati.org/">Marco Stronati</a>
   <ul>
-    <li style="margin-top: 1ex;">PostDoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-01 to 2017-12:<br/>
+    <li style="margin-top: 1ex;">PostDoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-01 to 2017-12:
     <a href="https://arxiv.org/abs/1802.00588">Formally Secure Compilation</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now at <a href="https://www.tezos.com/">Tezos</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://fachini.net/">Guglielmo Fachini</a>
   <ul>
-    <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-01 to 2017-12:<br/>
+    <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-01 to 2017-12:
     <a href="https://arxiv.org/abs/1802.00588">Secure compilation proofs in Coq</a></li>
   </ul>
 
