--- a/students.html
+++ b/students.html
@@ -106,15 +106,20 @@
     <a href="https://arxiv.org/abs/1802.00588">Secure compilation proofs in Coq</a></li>
   </ul>
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.williamjbowman.com/">William J. Bowman</a> (Research Intern, Northeastern University)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://ananoraevans.org/">Ana Nora Evans</a>
+  <ul>
+    <li style="margin-top: 1ex;">Visiting Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-05 to 2017-08:
+    <a href="https://arxiv.org/abs/1802.00588">Software-fault isolation backend for secure compilation</a></li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at <a href="https://engineering.virginia.edu/departments/computer-science">University of Virginia</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://pit-claudel.fr/clement/">Clément Pit-Claudel</a> (Research Intern, MIT)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a> (Research Intern, ENS Paris)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://ananoraevans.org/">Ana Nora Evans</a> (Visiting Researcher, University of Virginia)</li>
-
   <li style="margin-bottom: 1ex;"><a href="http://tomer.libal.info/">Tomer Libal</a> (Research Engineer)</li>
+
+  <li style="margin-bottom: 1ex;"><a href="https://www.williamjbowman.com/">William J. Bowman</a> (Research Intern, Northeastern University)</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://yannis.computer/">Yannis Juglaret</a>
   <ul>
