--- a/students.html
+++ b/students.html
@@ -108,7 +108,7 @@
 
   <li style="margin-bottom: 1ex;"><a href="http://ananoraevans.org/">Ana Nora Evans</a>
   <ul>
-    <li style="margin-top: 1ex;">Visiting Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-05 to 2017-08:
+    <li style="margin-top: 1ex;">Visiting Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-05 to 2017-08:<br/>
     <a href="https://arxiv.org/abs/1802.00588">Software-fault isolation backend for secure compilation</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at <a href="https://engineering.virginia.edu/departments/computer-science">University of Virginia</a>]</div></li>
