--- a/students.html
+++ b/students.html
@@ -113,7 +113,12 @@
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at <a href="https://engineering.virginia.edu/departments/computer-science">University of Virginia</a>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://pit-claudel.fr/clement/">Clément Pit-Claudel</a> (Research Intern, MIT)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://pit-claudel.fr/clement/">Clément Pit-Claudel</a>
+  <ul>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-07 to 2017-10:<br/>
+    Pattern matching tactics for F*</li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at <a href="https://www.eecs.mit.edu/">MIT</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a> (Research Intern, ENS Paris)</li>
 
