--- a/students.html
+++ b/students.html
@@ -122,7 +122,7 @@
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a>
   <ul>
-    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-03 to 2017-08:
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-03 to 2017-08:<br/>
      Micro-policies backend for secure compilation</li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
