--- a/students.html
+++ b/students.html
@@ -113,19 +113,19 @@
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at <a href="https://engineering.virginia.edu/departments/computer-science">University of Virginia</a>]</div></li>
 
+  <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a>
+  <ul>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-03 to 2017-08:<br/>
+     <a href="https://arxiv.org/abs/1802.00588">Micro-policies backend for secure compilation</a></li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
+
   <li style="margin-bottom: 1ex;"><a href="http://pit-claudel.fr/clement/">Clément Pit-Claudel</a>
   <ul>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-07 to 2017-10:<br/>
     Interactive proving and effect masking in F*</li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at <a href="https://www.eecs.mit.edu/">MIT</a>]</div></li>
-
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a>
-  <ul>
-    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-03 to 2017-08:<br/>
-     Micro-policies backend for secure compilation</li>
-  </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://tomer.libal.info/">Tomer Libal</a> (Research Engineer)</li>
 
