--- a/students.html
+++ b/students.html
@@ -127,7 +127,12 @@
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at <a href="https://www.eecs.mit.edu/">MIT</a>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://tomer.libal.info/">Tomer Libal</a> (Research Engineer)</li>
+  <li style="margin-bottom: 1ex;"><a href="http://tomer.libal.info/">Tomer Libal</a>
+  <ul>
+    <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.msr-inria.fr/">MSR-Inria</a>, 2017-01 to 2017-07:<
+    Refactoring the F* type-checker</li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now Assistant Professor at <a href="https://www.aup.edu/academics/undergraduate/majors/computer-science">The American University of Paris</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="https://www.williamjbowman.com/">William J. Bowman</a> (Research Intern, Northeastern University)</li>
 
