--- a/students.html
+++ b/students.html
@@ -129,7 +129,7 @@
 
   <li style="margin-bottom: 1ex;"><a href="http://tomer.libal.info/">Tomer Libal</a>
   <ul>
-    <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.msr-inria.fr/">MSR-Inria</a>, 2017-01 to 2017-07:<
+    <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.msr-inria.fr/">MSR-Inria</a>, 2017-01 to 2017-07:
     Refactoring the F* type-checker</li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now Assistant Professor at <a href="https://www.aup.edu/academics/undergraduate/majors/computer-science">The American University of Paris</a>]</div></li>
