--- a/students.html
+++ b/students.html
@@ -134,7 +134,12 @@
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Now Assistant Professor at <a href="https://www.aup.edu/academics/undergraduate/majors/computer-science">The American University of Paris</a>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.williamjbowman.com/">William J. Bowman</a> (Research Intern, Northeastern University)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://www.williamjbowman.com/">William J. Bowman</a>
+  <ul>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-10 to 2017-12:
+    From Coq to Dependently Typed Assembly</li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at <a href="https://www.ccis.northeastern.edu/">Northeastern University</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://yannis.computer/">Yannis Juglaret</a>
   <ul>
