--- a/students.html
+++ b/students.html
@@ -151,11 +151,11 @@
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="http://www.univ-paris-diderot.fr/english/sc/site.php?bc=formations&np=ficheufr&n=11&g=sm">Paris 7</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Now engineer at <a href="http://www.defense.gouv.fr/dga/la-dga2/expertise-et-essais/les-centres-d-expertise-et-d-essais-de-la-dga/dga-maitrise-de-l-information">DGA-MI</a>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/dianegalloiswong">Diane Gallois-Wong</a>
+  <li style="margin-bottom: 1ex;"><a href="https://www.lri.fr/membre.php?mb=2372">Diane Gallois-Wong</a>
   <ul>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2016-03 to 2016-08:<br/> <a href="http://prosecco.gforge.inria.fr/personal/hritcu/students/diane/report.pdf">Formalising Luck: Improved Probabilistic Semantics for Property-Based Generators</a></li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [then intern at <a href="http://trust-in-soft.com/">TrustInSoft</a>] [Now PhD student at <a href=""> LRI, Universite Paris-Sud</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [then intern at <a href="http://trust-in-soft.com/">TrustInSoft</a>] [Now PhD student at <a href="https://www.lri.fr/">LRI, Université Paris-Sud</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="https://github.com/alejandroag">Alejandro Aguirre</a>
   <ul>
