--- a/students.html
+++ b/students.html
@@ -161,7 +161,7 @@
   <ul>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2016-04 to 2016-08:<br/> <a href="students/alejandro/report.pdf">Towards a Provably Correct Encoding from F* to SMT</a></li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="http://www.univ-paris-diderot.fr/english/sc/site.php?bc=formations&np=ficheufr&n=11&g=sm">Paris 7</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Now at <a href="http://software.imdea.org/">IMDEA Software Institute</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="http://www.univ-paris-diderot.fr/english/sc/site.php?bc=formations&np=ficheufr&n=11&g=sm">Paris 7</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Now PhD Student at <a href="http://software.imdea.org/">IMDEA Software Institute</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="https://poisson.chat/">Li-yao Xia</a>
   <ul>
