--- a/students.html
+++ b/students.html
@@ -169,7 +169,7 @@
       <a href="students/topics/2015/quick-chick.pdf">Integrating Functional Logic Programming with Constraint Solving for Random Generation of Structured Data</a>
     </li>
   </ul>
-    <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Now PhD student at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>]</div></li>
+    <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Now PhD student at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://www.eleves.ens.fr/home/forest">Simon Forest</a>
   <ul>
@@ -177,7 +177,7 @@
       <a href="http://www.eleves.ens.fr/home/forest/data/rapport-m2.pdf">Micro-F* in F*</a>
     </li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [MSc student at <a href="http://www.math.univ-paris-diderot.fr/m2lmfi/">LMFI</a>] [Now PhD Student at  <a href="https://www.polytechnique.edu/en/department-of-computer-science">École Polytechnique</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [MSc student at <a href="http://www.math.univ-paris-diderot.fr/m2lmfi/">LMFI</a>] [Now PhD Student at  <a href="https://www.polytechnique.edu/en/department-of-computer-science">École Polytechnique</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="https://zoep.github.io/">Zoe Paraskevopoulou</a>
   <ul>
@@ -185,7 +185,7 @@
       <a href="publications/verified-testing-report.pdf">QuickChick: A Coq Framework For Verified Property-Based Testing</a> (<a href="http://artemis-new.cslab.ece.ntua.gr:8080/jspui/bitstream/123456789/7104/1/DT2014-0240.pdf">thesis</a>)
     </li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="http://www.ece.ntua.gr/index.php?lang=en">NTU Athens<a/>] [Then <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a> student] [Now PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="http://www.ece.ntua.gr/index.php?lang=en">NTU Athens<a/>] [Then <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a> student] [Now PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="https://nickgian.github.io/">Nick Giannarakis</a>
   <ul>
@@ -193,7 +193,7 @@
       <a href="publications/micropolicies-draft.pdf">Formally Verified Tag-Based Enforcement of Control Flow Integrity</a> (<a href="http://artemis-new.cslab.ece.ntua.gr:8080/jspui/bitstream/123456789/7107/1/DT2014-0243.pdf">thesis</a>)
     </li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="http://www.ece.ntua.gr/index.php?lang=en">NTU Athens<a/>] [Then <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a> student] [Now PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="http://www.ece.ntua.gr/index.php?lang=en">NTU Athens<a/>] [Then <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a> student] [Now PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]</div></li>
 
   <li style="margin-bottom: 1ex;"><a href="http://de.linkedin.com/in/busenius">Alex Busenius</a>
   <ul>
