--- a/students.html
+++ b/students.html
@@ -157,7 +157,7 @@
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>] [Intern at <a href="http://trust-in-soft.com/">TrustInSoft</a>] [Now PhD student at <a href="https://www.lri.fr/">LRI, Université Paris-Sud</a>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/alejandroag">Alejandro Aguirre</a>
+  <li style="margin-bottom: 1ex;"><a href="https://software.imdea.org/people/alejandro.aguirre">Alejandro Aguirre</a>
   <ul>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2016-04 to 2016-08:<br/> <a href="students/alejandro/report.pdf">Towards a Provably Correct Encoding from F* to SMT</a></li>
   </ul>
@@ -187,7 +187,7 @@
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc Student at <a href="http://www.ece.ntua.gr/index.php?lang=en">NTU Athens<a/>] [Then <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a> student] [Now PhD student at <a href="https://www.cs.princeton.edu/">Princeton University</a>]</div></li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://nickgian.github.io/">Nick Giannarakis</a>
+  <li style="margin-bottom: 1ex;"><a href="https://scholar.princeton.edu/nick">Nick Giannarakis</a>
   <ul>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2014-04 to 2014-09:<br/>
       <a href="publications/micropolicies-draft.pdf">Formally Verified Tag-Based Enforcement of Control Flow Integrity</a> (<a href="http://artemis-new.cslab.ece.ntua.gr:8080/jspui/bitstream/123456789/7107/1/DT2014-0243.pdf">thesis</a>)
@@ -201,7 +201,8 @@
     <li style="margin-top: 1ex;">Bachelor's Thesis, Finished 2008-10-28:<br/><a href="http://www.infsec.cs.uni-saarland.de/projects/expi2java">Expi2Java - An Extensible Code Generator for Security Protocols</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at <a href="https://www.cs.uni-saarland.de/">Saarland University</a>] [First employment <a href="http://www.de.capgemini.com">Capgemini</a>] [Now at <a href="http://www.luxoft.com/">Luxoft</a>]</div></li>
-  <li style="margin-bottom: 1ex;"><a href="https://thorstent.github.io/">Thorsten Tarrach</a>
+
+  <li style="margin-bottom: 1ex;"><a href="http://www.tarrach.eu/">Thorsten Tarrach</a>
   <ul>
     <li style="margin-top: 1ex;">Master's Thesis, Finished 2010-08-31:<br/> <a href="http://www.infsec.cs.uni-saarland.de/projects/dverify">Automatically Verifying "M" Modeling Language Constraints</a> (<a href="https://thorstent.github.io/theses/master.pdf">thesis</a>)</li>
     <li style="margin-top: 1ex;">Bachelor's Thesis, Finished 2008-10-27:<br/> <a href="https://thorstent.github.io/theses/bachelor.pdf"> Spi2F# - A Prototype Code Generator for Security Protocols</a></li>
