--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ Research Cambridge</a>.</p>
 
   <li style="margin-bottom: 1ex;">Participating in <a href="https://project-everest.github.io/">Project Everest</a>; a collaboration between Microsoft Research, Inria,<br/> and the community at large to build and deploy a verified HTTPS stack.</li>
 
-  <li style="margin-bottom: 1ex;">Participating in DARPA <a href="https://www.darpa.mil/news-events/2017-04-10">SSITH</a>/HOPE project (Advanced New Hardware Optimized for Policy Enforcement, A New HOPE); a collaboration with <a href="http://www.draper.com/">Draper Labs</a>, <a href="http://www.cis.upenn.edu/">University of Pennsylvania</a>, <a href="https://www.pdx.edu/computer-science/">Portland State University</a>, and <a href="http://web.mit.edu/">MIT</a>.</li>
+  <li style="margin-bottom: 1ex;">Participating in DARPA <a href="https://www.darpa.mil/news-events/2017-04-10">SSITH</a>/HOPE project (Advanced New Hardware Optimized for Policy Enforcement, A New HOPE); a collaboration with <a href="http://www.draper.com/">Draper Labs</a>, <a href="https://dovermicrosystems.com/">Dover Microsystems</a>, <a href="http://www.cis.upenn.edu/">University of Pennsylvania</a>, <a href="https://www.pdx.edu/computer-science/">Portland State University</a>, and <a href="http://web.mit.edu/">MIT</a>.</li>
 
   <!-- <li style="margin-bottom: 1ex;"><a href="https://www.legifrance.gouv.fr/affichTexte.do;jsessionid=23A37358E434B273ADF239CCF8DE8448.tpdjo10v_2?cidTexte=JORFTEXT000029008325&categorieLien=id">Received Inria award for PhD Supervising and for Research (PEDR)</a>, March 2016</li> -->
 
