--- a/service.html
+++ b/service.html
@@ -28,6 +28,7 @@
   <b>General Chair</b> of 
   <a href="http://www.ieee-security.org/TC/EuroSP2017/">
        2nd IEEE European Symposium on Security and Privacy (EuroS&P 2017)</a>
+  (26-28 April 2017, Paris, France; 250 registered participants)
   </li>
 
   <li style="margin-bottom: 1ex;">
